src/objects/P1__c.object
<CustomObject>
    <description>Link</description>
    <fields>
        <fullName>Appartment_Name__c</fullName>
        <label>Appartment Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_No__c</fullName>
        <label>Block No</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_no__c</fullName>
        <label>Flat no</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>P1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>P1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>